# medical-ai-application

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_data.sh
app/: database.py  main.py  models.py  schemas.py
app/ai/: agent.py
app/routes/: ai_routes.py  appointment_routes.py  doctor_routes.py  medical_record_routes.py  patient_routes.py
app/services/: chromadb_service.py  langchain_agent.py  mock_data.py  openrouter_service.py
app/static/: appointments.html  chat.html  index.html  login.html  styles.css
