[project]
name = "medical-ai-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
]
